--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <meta property="og:title" content="zyestin" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://zyestin.github.io/" />
+<meta property="og:url" content="http://zyestin.github.io/" />
 <meta itemprop="name" content="zyestin">
 <meta itemprop="description" content=""><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="zyestin"/>
@@ -98,7 +98,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://zyestin.github.io/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://zyestin.github.io/" >
     &copy;  zyestin 2023 
   </a>
     <div>
