--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
           <a href="/posts/my-first-post/" class="color-inherit dim link">
-            My First Post
+            hugo &#43; github pages usage
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
