--- a/public/index.html
+++ b/public/index.html
@@ -165,11 +165,11 @@ Mac、VSC快捷键 Mac 系统自带
           自实现方案 代码规范
 React Native 编码提效 on VSCode
 基础组件封装
-动态下载&amp;应用字体
-仿抖音/小红书等 对贴图进行拖拽、缩放、旋转的复杂手势
-标签 富文本
+瀑布流列表base组件 图片base组件 模仿抖音、小红书 输入 #标签 高亮 方案
 瀑布流列表 自动滚动动画
 横向 瀑布流列表
+仿抖音/小红书等 对贴图进行拖拽、缩放、旋转的复杂手势
+动态下载&amp;应用字体
 三方方案 react-native-exception-handler 
         </div>
           <a href="/zyestin/posts/rn/readme/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
@@ -222,6 +222,12 @@ React Native 编码提效 on VSCode
           <h2 class="f5 fw4 mb4 dib mr3">
             <a href="/zyestin/posts/rn/base-components/" class="link black dim">
               封装常用基础组件
+            </a>
+          </h2>
+        
+          <h2 class="f5 fw4 mb4 dib mr3">
+            <a href="/zyestin/posts/rn/douyin-label-input/" class="link black dim">
+              模仿抖音、小红书 输入 #标签 高亮
             </a>
           </h2>
         
